screen-accounts/screen-accounts.css
@import '../x-screen/x-screen.css';
@import '../x-address/x-address.css';

x-accounts-list {
    width: 100%;
    flex-grow: 1;
    overflow: auto;
    margin-bottom: 24px;
    border-bottom: 1px solid rgba(255, 255, 255, 0.5);
    flex-direction:  column;
}

x-account {
    display: flex;
    padding: 8px 0;
    border-bottom: 1px solid rgba(255, 255, 255, 0.1);
    animation: from-right 500ms;
    cursor: pointer;
}

x-account:hover {
    background-color: rgba(255, 255, 255, 0.1);
}

x-account:last-child {
    border-bottom: 1px solid transparent;
}

x-account x-identicon svg {
    width: 80px;
    height: 71px;
    margin-right: 8px;
}

x-account .x-address {
    font-size: 12px;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
    max-width: calc(100% - 96px);
    margin-top: 8px;
    pointer-events: none;
    padding: 0;
    min-width: auto;
}

/* Responsiveness */
@media (min-width: 480px) {
    x-account {
        justify-content: center;
        padding: 8px 16px;
    }

    x-accounts-list {
        width: 480px;
    }
}

/* Empty Accounts List */
x-accounts-list:empty{
	display: flex;
}

x-accounts-list:empty:before {
	display: flex;
	flex-grow: 1;
	content: 'Click below to add an account';
	font-size: 20px;
	align-items: center;
	justify-content: center;
	height: 100%;
}

